--- a/feature-home/build.gradle
+++ b/feature-home/build.gradle
@@ -48,9 +48,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation project(path: ':create_new_sermon')
     kapt "com.google.dagger:hilt-compiler:$dagger_hilt"
     implementation project(":resource")
     implementation project(":domain")
