formulario basico para crear sermon

--- a/resource/build.gradle
+++ b/resource/build.gradle
@@ -37,4 +37,6 @@ android {
 
 dependencies {
     implementation "com.google.android.material:material:$material_version"
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
