consumir gpt para obtener el sermon

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,7 @@ dependencies {
     implementation project(":data")
     implementation project(":support")
     implementation project(":feature-home")
+    implementation project(":create_new_sermon")
     implementation app_android.values()
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.google.code.gson:gson:$gson_version"
