--- a/feature-home/src/main/AndroidManifest.xml
+++ b/feature-home/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
     <application>
         <activity
             android:name="com.cristhianbonilla.feature_home.HomeActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
